# git-tutorial

./: Dockerfile  README.md  build.sh  calc.py  check_env.sh  pyproject.toml  test_calc.py  test_functional_web_app.py  test_unit_calc.py  web_app.py
.circleci/: config.yml
.github/workflows/: cronenv.yml  main.yml
ansible_example/: hosts  main.yml
ansible_example/roles/base_packages/defaults/: main.yml
ansible_example/roles/base_packages/tasks/: main.yml
k8s-manifests/: config_map.yaml  daemonset.yaml  deployment-configmap.yaml  deployment-secret.yaml  deployment.yaml  liveness-probe.yaml  pod.yaml  readiness-probe.yaml  svc.yaml
terraform/: .terraform.lock.hcl  ec2.tf  s3.tf  security_groups.tf
