[tool.poetry]
name = "git-tutorial"
version = "0.1.0"
description = ""
authors = ["Goutham <gypsycrit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.3"

[tool.poetry.dev-dependencies]
flask = "^2.2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
