[tool.poetry]
name = "git-tutorial"
version = "0.1.0"
description = ""
authors = ["goutham <pratapagoutham@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
black = "^23.1.0"
boto3 = "^1.26.85"
nose = "^1.3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
