[tool.poetry]
name = "git-tutorial"
version = "0.1.0"
description = ""
authors = ["goutham <gypsycrit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.3"
black = "^23.1.0"
nose = "^1.3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
